--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "*"
+    "node": ">=20.x"
   },
   "scripts": {
     "dev": "next dev",
     "dev:clean": "bash dev-clean.sh && npm run dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "verify-env": "node scripts/verify-env.js",
+    "prebuild": "node scripts/verify-env.js"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
