--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "start": "next start",
     "lint": "eslint",
     "verify-env": "node scripts/verify-env.js",
-    "prebuild": "node scripts/verify-env.js"
+    "prebuild": "node scripts/verify-env.js",
+    "test:integration": "node scripts/test-integration.js"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
